Fixed the spacing around the mini figure demos

--- a/src/_1_modules/demo/demo.scss
+++ b/src/_1_modules/demo/demo.scss
@@ -58,7 +58,13 @@
 		}
 	}
 	&__result {
-		box-shadow: 0 0 0 1px #000;
+		border: 1px solid #000;
+
+		//The borders and shadows page demos can't have a real border
+		.borders-and-shadows-on-guttered-cells & {
+			box-shadow: 0 0 0 1px #000;
+			border: 0;
+		}
 
 		.lt-ie9 & {
 			outline: 1px solid #000;
